<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2055a6"
    android:orientation="vertical"
    tools:context="com.tristenallen.watersource.controller.EditProfileActivity"
    >


    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        >

        <TextView
            android:text="@string/enter_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/enterTXT"
            android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
            android:layout_below="@+id/WaterTXT"
            android:layout_alignParentStart="true"
            android:layout_marginTop="11dp" />

        <TextView
            android:text="@string/water_src_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/WaterTXT"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp" />

        <TextView
            android:text="@string/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:id="@+id/locationTXT"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            android:layout_below="@+id/enterTXT"
            android:layout_alignParentStart="true" />


        <TextView
            android:text="@string/waterCon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:id="@+id/waterConditionTXT"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            android:layout_below="@+id/waterType"
            android:layout_alignParentStart="true" />

        <EditText android:layout_width="fill_parent"
                  android:layout_height="40dp"
                  android:hint="@string/latitude"
                  android:background="#f3f3f3"
                  android:paddingLeft="5dp"
                  android:id="@+id/latitudeTXT"
                  android:layout_marginTop="20dp"
                  android:layout_below="@+id/locationTXT"
                  android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/waterType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/longitudeTXT"
            android:textAppearance="@style/TextAppearance.AppCompat.Inverse"
            android:layout_alignParentStart="true"
            android:layout_marginTop="31dp"
            android:id="@+id/waterTypeTXT" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/waterType"
            android:background="#f3f3f3"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/waterTypeTXT"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="#f3f3f3"
            android:inputType="textPersonName"
            android:paddingLeft="5dp"
            android:hint="@string/longitude"
            android:id="@+id/longitudeTXT"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/latitudeTXT"
            android:layout_alignParentStart="true" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:id="@+id/waterCondition"
            android:background="#f3f3f3"
            android:layout_below="@+id/waterConditionTXT"
            android:layout_alignParentStart="true"
            android:layout_marginTop="13dp"/>
        <Button android:layout_width="100dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:background="#f3f3f3"
                android:text="@string/submit"
                android:visibility="visible"
                style="@style/Widget.AppCompat.Light.ActionButton"
                android:id="@+id/submitButton"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>

    </RelativeLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
        >

    </LinearLayout>


</LinearLayout>