<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">


    <TextView
            android:text="@string/water_purity_reports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

    <ListView android:id="@+id/locationPurityReportListView"
              android:layout_width="match_parent"
              android:layout_height="373dp"
              android:background="#2055a6"
              android:drawSelectorOnTop="false"
              android:layout_alignParentStart="true"
              android:layout_below="@+id/title"
    />
    <Button
            android:text="@string/view_graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/viewHistographButton"
            android:layout_marginStart="29dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
    <Button
            android:text="@string/add_new_purityreport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addNewReportButton"
            android:layout_alignBaseline="@+id/viewHistographButton"
            android:layout_alignBottom="@+id/viewHistographButton"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"/>
</RelativeLayout>