<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ADD8E6"
    tools:context="com.tristenallen.watersource.controller.LaunchActivity"
    android:layout_centerVertical="true">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_watersource"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
                android:id="@+id/textView"
            android:layout_marginTop="90dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:id="@+id/relativeLayout"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="22dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:text="@string/login"
                android:background="#FFFF"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp" />

            <Button
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:background="#FFFF"
                android:layout_marginEnd="46dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/team"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageView" />

    </RelativeLayout>

